popup z-index fix

--- a/styles/projects/dandit.css
+++ b/styles/projects/dandit.css
@@ -99,7 +99,7 @@ th:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -2;       
+  
 }
 
 .popup {
@@ -108,7 +108,6 @@ th:hover {
   border-radius: 15px;
   display: none;
   flex-direction: column;
-  z-index: 1;
 }
 
 #cont-container {
